--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,14 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         app:tint="#fff" />
 
+    <Button
+        android:id="@+id/capt1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        />
+
+
 </RelativeLayout>
