--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,13 +44,30 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         app:tint="#fff" />
 
-    <Button
-        android:id="@+id/capt1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+    <ImageButton
+        android:layout_width="40sp"
+        android:layout_height="40sp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/startVideo"
+        android:src="@drawable/ic_play_white"
+        android:scaleType="centerCrop"
+        android:background="?attr/selectableItemBackgroundBorderless"
+         />
+
+    <ImageButton
+        android:layout_width="40sp"
+        android:layout_height="40sp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="72dp"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/stoptVideo"
+        android:src="@drawable/ic_stop"
+        android:scaleType="centerCrop"
+        android:background="?attr/selectableItemBackgroundBorderless"
         />
 
 
